--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,26 @@ dependencies = [
     "requests>=2.32.4",
     "uvicorn>=0.34.2",
     "websockets>=15.0.1",
+    "torch>=2.6.0",
+    "torchaudio",
+    "torchvision",
 ]
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-cu124" },
+]
+torchaudio = [
+    { index = "pytorch-cu124" },
+]
+torchvision = [
+    { index = "pytorch-cu124" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
 
 [tool.ruff]
 target-version = "py312"
